--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-register": "^6.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "truffle": "^5.8.0",
     "web-vitals": "^2.1.4"
